# cli-o

./: README.md  compose.yaml
clio-j/: .gitignore  (+3 more)
clio-py/: .flake8  .gitignore  .pre-commit-config.yaml  demo.py  environment.yml  pyproject.toml
clio-py/clio/: __init__.py  args.py  arrays.py  clocks.py  collections.py  dbs.py  dttms.py  emails.py  expr.py  hashing.py  html.py  inspection.py  io.py  numbers.py  process.py  rest.py  router.py  settings.py  strs.py  system.py  threading.py  widget.py
clio-py/clio_services/: __init__.py
clio-py/clio_services/alerts/: __init__.py  alerts_schema.sql  generate_alerts_schema.py  tickets.py
clio-py/clio_services/database/: __init__.py  backup.py  db_widget.py
clio-py/clio_services/monitoring/: generate_monitoring_schema.py  monitoring_schema.sql  server_monitor.py  server_widget.ipynb  server_widget.py  services_monitor.py  services_widget.py
clio-py/clio_services/tasks/: tasks_widget.py
clio-py/core/: args.py  arrays.py  clocks.py  collections.py  dbs.py  dttms.py  emails.py  expr.py  hashing.py  html.py  io.py  process.py  router.py  services.py  strs.py  system.py  threading.py  widget.py
clio-py/core/alerts/: __init__.py  tickets.py
clio-py/core/monitoring/: db_widget.py  server_monitor.py  server_widget.ipynb  server_widget.py  services_monitor.py  services_widget.py
clio-py/core/tasks/: tasks_widget.py
clio-py/database/: __init__.py  backup.py  generate_monitoring_schema.py  monitoring_schema.sql
clio-py/settings/: __init__.py  _defaults.py  _logging.py  _patches.py
clio-py/tests/: __init__.py
(+207 files in other folders)
