[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clio"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy", "pandas", "matplotlib", "numba", "plotly", "requests", "tabulate", "websocket-client", "urllib3"
]

[tool.hatch.build.targets.wheel]
packages = ["clio"]
